--- a/samples/repch/manifest.json
+++ b/samples/repch/manifest.json
@@ -3,6 +3,7 @@
   "short_name": "Repch",
   "start_url": "index.html",
   "display": "standalone",
+	"orientation":"portrait",
 
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2",
